<resources>
    <string name="app_name">AbsenS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="person_name">Person Name</string>
    <string name="free_date">Free date</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="nik_number">Nik Number</string>
    <string name="birthday_birthplace">Birthday and Birthplace</string>
    <string name="gender">Gender</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="village">Village</string>
    <string name="sub_district">Sub-District</string>
    <string name="religion">Religion</string>
    <string name="job">Job</string>
    <string name="citizenship">Citizenship</string>
    <string name="submit">submit</string>
    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="reminder_time">Reminder Time</string>
    <string name="settings">Settings</string>
    <string name="rt_name">Rt Name</string>
    <string name="save">Save</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="free"> free"</string>
    <string name="time_for_daily_reminder">Time for daily Reminder</string>
    <string name="no_one_free_today">No One free today</string>
    <string name="quarantined">Quarantined</string>
    <string name="free_today">Freed Today</string>
    <string name="person">Person</string>
    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="about_app">About App</string>
    <string name="content1">Aplikasi ini digunakan untuk melakukan pendataan oleh RT setempat terhadap Masyarakat yang baru kembali dari luar kota. Pendataan dilakukan dengan menentukan waktu karantina yang diberikan kepada Masyarakat tersebut. Hal ini penting, untuk memutus rantai penyebaran COVID-19</string>
    <string name="about_develop">About Developer</string>
    <string name="jurusan">Teknik Informatika</string>
    <string name="fakultas">Fakultas Teknik</string>
    <string name="universitas">Universitas Mulawarman</string>
    <string name="ig">\@naufanlalala</string>
    <string name="export_data">Export Data</string>
    <string name="success_export">success export</string>
    <string name="file_name">File Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="number_of_quarantine_day">Number of Quarantine Day</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_wait">Please Wait ....</string>

    <string name="event_date">event date</string>
    <string name="event_name">event name</string>
    <string name="event">Event</string>
    <string name="find">find</string>
    <string name="find_by_name">Find By Name</string>
    <string name="absen">Absen</string>
    <string name="absent">absent</string>
    <string name="temperature">Temperature</string>
    <string name="personL_list">Person List</string>
    <string name="event_list">Event List</string>
    <string name="mandatory_person">name and adress are mandatory</string>
    <string name="add_person">Add Person</string>
    <string name="list_of_person_in_quarantined">List of Person in Quarantined</string>
    <string name="list_of_person_freed_today">List of Person Freed Today</string>
</resources>
