<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_absen"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_free"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_export"
        android:title="@string/export_data"
        app:showAsAction="never" />

</menu>
