<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.person.QuarantineFragment">


    <LinearLayout
        android:id="@+id/ll_inQurantine"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:clickable="true"
        android:orientation="vertical"
        android:background="@drawable/background_choice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"
        android:focusable="true">
        <TextView
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quarantined"/>
        <TextView
            android:text="@string/list_of_person_in_quarantined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_free_today"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@drawable/background_choice"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_inQurantine"
        app:layout_constraintVertical_bias="0.014">

        <TextView
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/free_today" />
        <TextView
            android:text="@string/list_of_person_freed_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>