<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_announce"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/person_name"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp">
            <Button
                android:id="@+id/btnAbsen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@drawable/button_background"
                android:elevation="8dp"
                android:text="@string/absent"
                android:textColor="@android:color/white" />
        </LinearLayout>
</androidx.cardview.widget.CardView>